# routewright

./: .gitignore  README.md  screenshot.mjs
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  limiter.py
backend/app/models/: request.py  response.py
backend/app/routers/: health.py  plan.py  refresh_leg.py
backend/app/services/: __init__.py  directions.py  geocache.py  geocoder.py  stay_defaults.py
backend/tests/: conftest.py  test_directions.py  test_geocache.py  test_geocoder.py  test_health.py  test_plan.py  test_plan_edge_cases.py  test_rate_limiting.py  test_refresh_leg.py  test_stay_defaults.py
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: LegCard.tsx  PlanForm.tsx  PlannerPage.tsx  StopCard.tsx  StopList.tsx  Timeline.tsx  WarningBadge.tsx
frontend/lib/: api.ts  fixture.ts  types.ts  utils.ts
